--- a/app.json
+++ b/app.json
@@ -1,10 +1,15 @@
 {
   "expo": {
-    "name": "minimall",
-    "slug": "minimall",
+    "name": "personmanager",
+    "slug": "personmanager",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "description": "",
+    "githubUrl": "https://github.com/mohammadjfadaee",
+    "android": {
+      "package": "com.expo_m.personmanager"
+    }
   }
 }
